# CourseCatalogs2Json

./: .gitattributes  .gitconfig  .gitignore  LICENSE  README.md  RUNNING.md  courses.json  download.py  download.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: CourseCatalogs2JsonUpdater.yml  daily.yml
